# Next-Gen-Job-Search-Agent

./: .gitignore  README.md  app.py  convert_resume.py  database.py  job_tracker.db  main.py  pyproject.toml  resume.txt
.azad/: .locked-paths
.github/workflows/: ci.yml
.venv-1/: pyvenv.cfg
.venv-1/Scripts/: activate  activate.bat
chroma_store/: chroma.sqlite3
job_search_agent/: __init__.py  config.py  dashboard.py  database.py  dev_utils.py  llm.py  logging_config.py  matcher.py  memory_clerk.py  models.py  resume_store.py  review_helpers.py  search.py  tailor.py  workflow.py
next_gen_job_search_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
outputs/11_NFQ_AI_Engineer_Python/: cover_note.txt  metadata.json  networking_message.txt  subject_line.txt  tailored_resume_bullets.md
outputs/56_Lever_AltaML/: cover_note.txt  metadata.json  networking_message.txt  subject_line.txt
outputs/57_Lever_Anomali/: cover_note.txt  metadata.json  networking_message.txt  subject_line.txt
outputs/70_Boards_Jobs_at_Blenheim_Chalcot_India/: cover_note.txt  metadata.json  networking_message.txt  subject_line.txt
outputs/74_Lever_Level_AI/: cover_note.txt  metadata.json  networking_message.txt  subject_line.txt
tests/: test_dev_utils.py  test_helpers.py  test_logging_config.py
