[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "next-gen-job-search-agent"
version = "0.1.0"
description = "An autonomous, local-first job search agent with anti-spam sourcing, truth-checked matching, durable memory, and human-in-the-loop review."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=0.5.5",
  "duckduckgo-search>=6.2.13",
  "langchain-core>=0.3.0",
  "langchain-ollama>=0.2.0",
  "langgraph>=0.2.35",
  "playwright>=1.46.0",
  "pydantic>=2.8.2",
  "requests>=2.32.3",
  "sentence-transformers>=3.0.1",
  "beautifulsoup4>=4.12.3",
  "streamlit>=1.37.0",
]

[project.scripts]
job-search-agent = "job_search_agent.cli:main"

[tool.setuptools.packages.find]
include = ["job_search_agent*"]
